@@ -2,11 +2,26 @@
 
 # Your instance name
 # MUST be UNIQUE for each instance
-INSTANCE_NAME=""
+INSTANCE_NAME=
 
-# Path to Minecraft Server Script "startserver.sh"
-# The script SHOULD BE in the same directory as the server jar
-SERVER_RUNSCRIPT=""
+# The directory path to the server
+SERVER_WORKING_DIRECTORY=
+
+# The Minecraft Java version, ex. "1.16.5" "1.20.1"
+MINECRAFT_VERSION=
+
+# Either "forge" or "fabric"
+SERVER_LOADER_TYPE=
+
+# The Forge or Fabric version, ex. "47.1.3" "latest" "recommended"
+#SERVER_LOADER_VERSION=
+
+# Variables for JVM arguments
+#SERVER_MAX_RAM=
+#SERVER_MIN_RAM=
+
+# JVM arguments as an array, ex. ("-server" "-XX:+AggressiveOpts")
+#SERVER_JVM_ARGUMENTS=
 
 # Java Version, such as "java-8" or "java-17"
-JAVA_VERSION=""
+JAVA_VERSION=
